--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Hugsward</string>
     <string name="action_checkout">Check out</string>
+    <string name="title_activity_checkout">Checkout</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="total_price_label">Total price :</string>
+    <string name="final_price_label">Final price :</string>
+    <string name="connexion_error_label">Could not retrieve offers. Please check Internet connection.</string>
 </resources>
