--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="book_quantity_label">"Quantity in basket : "</string>
     <string name="book_price_placeholder">00.00 €</string>
     <string name="book_price_label">Price : </string>
+    <string name="book_retrieval_error">Could not retrieve book list. Please check your
+        internet connection.</string>
 </resources>
